fix small styling regard z-index, add more strict time range handler

--- a/src/common/form/fields/_dateField.scss
+++ b/src/common/form/fields/_dateField.scss
@@ -46,10 +46,14 @@
     position: absolute;
     left: 0;
     top: 100% !important;
-    z-index: 2;
+    z-index: 3; // above bootstrap button
     margin-top: -2px;
     padding: 20px;
     min-width: 100%;
+
+    .DayPicker {
+      width: 100%;
+    }
   }
 
   .form-group {
